--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../src/index.js" type="module"></script>
-  <title>React App</title>
+  <link rel="stylesheet" href="style.css">
+  <title>testeur interaction BDD server/client</title>
 </head>
 <body>
   <div id="root"></div>
